apps/base/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    name: homepage
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    name: homepage
